# PyAccessibility

./: .gitignore  CONTRIBUTING.md  README.md  license.md  pyproject.toml  report.html  reports.html
.github/workflows/: ci.yml  main.yml
pyaccessibility/: __init__.py  cli.py  config.py  scanner.py
pyaccessibility/reports/: generator.py
pyaccessibility/reports/services/: email_service.py
pyaccessibility/rules/: __init__.py  advanced_rules.py  base.py  basic_rules.py  focus_rules.py
pyaccessibility/templates/: report.html
tests/: test_cli.py  test_scanner.py
tests/test_reports/: test_generator.py
tests/test_rules/: test_advanced_rules.py  test_basic_rules.py  test_focus_rules  test_img_alt_rule.py
