[tool.poetry]
name = "pyaccessibility"
version = "0.1.0"
description = "Web accessibility testing tool"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "pyaccessibility" }
]

[tool.poetry.scripts]
pyaccessibility = "pyaccessibility.cli:cli"


[tool.poetry.dependencies]
python = "^3.9"
reportlab = "^4.0.8"
aiosmtplib = "^3.0.1"  # For async email support
beautifulsoup4 = "^4.12.0"
httpx = "^0.24.0"
pydantic = "^2.0"
wcag-contrast-ratio = "^0.9"
html5lib = "^1.1"
click = "^8.1.8"
rich = "^13.9.4"
jinja2 = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
ruff = "^0.9.1"
mypy = "^1.3.0"
pre-commit = "^3.3.1"
types-beautifulsoup4 = "^4.12.0" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.13"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
warn_incomplete_stub = true